Fixed the layout to no longer change sizes when new selections are made. Added styling to Map Key for better legibility. Added code to make DisplayHeader toggleable. Added code to populate DIsplayHeader with correct text for target host.

--- a/client/src/components/ProTx/components/dashboard/AnalyticsDashboard.css
+++ b/client/src/components/ProTx/components/dashboard/AnalyticsDashboard.css
@@ -1,3 +1,3 @@
 .analytics-dashboard-root {
-    /* TBD */
+    overflow: hidden;
 }
