--- a/client/src/components/ProTx/components/dashboard/DisplayLayout.css
+++ b/client/src/components/ProTx/components/dashboard/DisplayLayout.css
@@ -5,10 +5,16 @@
 }
 .display-layout-map,
 .display-layout-chart  {
-    min-height: 78vh;
+    /* With header */
+    min-height: 80vh;
+    max-height: 80vh;
+    /* Without header*/
+    /* min-height: 85.5vh; */
+    /* max-height: 85.5vh; */
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    /* overflow: hidden; */
 }
 .display-layout-map {
     width: 60vw;
