--- a/client/src/components/ProTx/components/maps/MainMap.css
+++ b/client/src/components/ProTx/components/maps/MainMap.css
@@ -1,5 +1,11 @@
 @import '~leaflet/dist/leaflet.css';
 
+.color {
+    padding: 1rem;
+    border: 1px solid #000000;
+    background: rgba(255,255,255,0.7);
+}
+
 .legend {
     line-height: 18px;
     color: #555555;
@@ -11,4 +17,5 @@
     float: left;
     margin-right: 8px;
     opacity: 0.7;
+    border: 1px solid #000000;
 }
